public/css/ebook.css
body {
    display: grid;
    grid-template: auto 1fr auto / minmax(15px, 4%) minmax(200px, 92%) minmax(15px, 4%);;
    padding: 0;
    margin: 0;
    overflow: hidden;
}

/*
  <div class="parent">
    <header class="pink section">Header</header>
    <div class="left-side blue section" contenteditable>Left Sidebar</div>
    <main class="section coral" contenteditable> Main Content</main>
    <div class="right-side yellow section" contenteditable>Right Sidebar</div>
    <footer class="green section">Footer</footer>
  </div> */
.header-wrapper {
    max-width: fit-content;
}

#dark-button {
	top:20px;
	right:20px;
	position: absolute;
    min-width: 40px;
    min-height: 40px;
}
  
header {
    grid-column: 1 / 4;
}

.style-button {
    min-width: 40px;
    min-height: 40px;
    font-size: 20px;
    background-color: transparent;
    border: none;
}

.dark .style-button {
    color: white;
}

#stylesModal {
    display: none;
}

.modal {
    z-index: 150;
}

#openbtn {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    padding: 4px 8px 0;
}

#dark-button {
    font-size: 20px;
    margin: 0 0 0 1.25em;
    top: 0;
}

.modal-content {
    padding-bottom: 0;
    min-height: 400px;
}

#styles-button {
    top: 0;
	right: 68px;
	position: absolute;
    min-width: 40px;
    min-height: 40px;
    font-size: 20px;
    margin: 0 1.25em 0 0;
    background: transparent;
    border: none;
}
.dark #styles-button {
    color: white
}

.left-side {
    grid-column: 1 / 2;
}

main {
    grid-column: 2 / 3;
}

.right-side {
    grid-column: 3 / 4;
}

footer {
    margin-top:0;
    grid-column: 1 / 4;
    font-size: smaller;
}

.loading-cover {
    display: grid;
    place-items: center;
}

img {
    max-width: 90%;
}

.loading-message {
    padding-top: 1em;
    margin: 0 auto;
}

.view {
    position: relative;
    left: -7px;
}


.left-side {
    background-image: url('data:image/svg+xml;utf8,<svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M20 .755l-14.374 11.245 14.374 11.219-.619.781-15.381-12 15.391-12 .609.755z"/></svg>');
    background-position: 50%;
    background-repeat: no-repeat;
    z-index: 100;
}

.right-side {
    background-image: url('data:image/svg+xml;utf8,<svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd"><path d="M4 .755l14.374 11.245-14.374 11.219.619.781 15.381-12-15.391-12-.609.755z"/></svg>');
    background-position: 50%;
    background-repeat: no-repeat;
    z-index: 100;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

.select {
    border: solid 1px;
}

.dark select {
    color: white;
    background-color: rgb(70, 80, 89);
}
.closebtn {
    margin-left: 2px;
    margin-right: 12px;
    text-decoration: none;
    padding: 0 12px 0 6px;
    font-size: 25px;
}
.myTopBar-controls {
    margin: 0;
}
.myTopBar-controls > p {
    margin: 0;
    line-height: 34px;
}
.myTopBar-title {
    margin: 0.5em 0 1em;
}
.myTopBar-title > p {
    text-align: center;
    margin: 0;
}
.myTopBar-page {
    margin: 0.5em 0 0;
}
.myTopBar-page > p {
    text-align: center;
    margin: 0;
}


.myTopBar-controls.font-size {
    text-align: left;
    position: relative;
    white-space: nowrap;
    vertical-align: top; 
}

.myTopBar-controls.font-size input {
    display: inline-block;
    margin: 0;
    vertical-align: top;
    box-shadow: none;
}

.myTopBar-controls.font-size .minus,
.myTopBar-controls.font-size .plus {
    padding: 7px 10px 8px;
    height: 41px;
    background-color: #ffffff;
    border: 1px solid #efefef;
    cursor:pointer;
}

.myTopBar-controls.font-size .minus {
    border-right: 0; 
}

.myTopBar-controls.font-size .plus {
    border-left: 0; 
}

.myTopBar-controls.font-size .minus:hover,
.myTopBar-controls.font-size .plus:hover {
    background: #eeeeee; 
}

select {
    appearance: none;
    background-color: transparent;
    border: none;
    cursor: inherit;
    font-family: inherit;
    font-size: inherit;
    line-height: inherit;
    margin: 0;
    padding: 0 5%;
    width: 100%;
}

select::-ms-expand {
    display: none;
}
@media only screen and (min-width: 768px) {
    button {
        top: 20px;
    }
}

